--- a/TJMSorts/TJMSorts.csproj
+++ b/TJMSorts/TJMSorts.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <PackageId>TJMSorts</PackageId>
+    <Version>1.0.2</Version>
+    <Authors>Tim Bandelin</Authors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
+  </ItemGroup>
 
 </Project>
